Thu Sep 21 16:51:34 UTC 2006  Ciju John  <johnc@ociweb.com>

        * ace/TP_Reactor.h:
        * ace/TP_Reactor.cpp:
          The TP_Reactor signal handling implementation is
          incomplete. In the current implementation under certain
          circumstances (event loop breaks out if interrupted. This is
          controlled via ACE_Select_Reactor_T::restart()), a properly
          handled OS signal can break the reactor event loop in
          an unpredictable manner. This is due to the fact that we cannot
          predict which thread will receive the OS signal. Untill the
          TP_Reactor signal handling is fixed, I am commenting it out.

Thu Sep 21 15:13:19 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
          Added new bug 2188 regression test.

Mon Sep 18 10:56:29 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Add buildbits=64
          branch for Sun Studio 11 (Sun C++ 5.8). Thanks to Aleksandar
          Vukajlovic <vukajlo at finsoft dot co dot yu> for this.

        * THANKS: Added Aleksandar Vukajlovic to the Hall of Fame.

Thu Sep 14 23:01:16 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Bound_Ptr.inl: Tweak syntax to try and work around apparant
          issues with BCB6.

Thu Sep 14 21:48:39 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.inl (thr_getspecific): Removed the ACE_Errno_Guard
          around ::TlsGetValue() in the ACE_HAS_WTHREADS case. The comments
          near the code said (paraphrasing) "...it was to protect against
          ACE_Log_Msg::instance() overwriting the error value before it had a
          chance to be logged; although ACE_ERROR et al already store the
          error value before calling ACE_Log_Msg::instance(), there may be a
          chance that other uses of ACE_Log_Msg don't protect this way."